--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -1,6 +1,8 @@
 % #####################################################
 % #####################################################
 % #####################################################
+\setchapterimage{figures/chap4/chapter_head}
+
 \setchapterpreamble[u]{\margintoc}
 \chapter{Vacuum RF Breakdown and Multipactor}\label{chap:Multipactor}
 
