--- a/styles/kaorefs.sty
+++ b/styles/kaorefs.sty
@@ -1,22 +1,4 @@
-%% kaorefs.sty
-%% Copyright 2020 Federico Marotta
-%% Copyright 2020 Giuseppe Silano <g.silano89@gmail.com>
-%
-% This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License, either version 1.3
-% of this license or (at your option) any later version.
-% The latest version of this license is in
-%   http://www.latex-project.org/lppl.txt
-% and version 1.3 or later is part of all distributions of LaTeX
-% version 2005/12/01 or later.
-%
-% This work has the LPPL maintenance status `maintained'.
-%
-% The Current Maintainer of this work is Federico Marotta
-%
-% This work consists of all the files listed in MANIFEST.md.
-
-\ProvidesPackage{styles/kaorefs}[2020/22/06 v1.1.0 kaorefs]
+\ProvidesPackage{styles/kaorefs}
 
 % Easily label and reference elements
 % Note that \label must appear after \caption
