--- a/styles/mdftheorems.sty
+++ b/styles/mdftheorems.sty
@@ -1,22 +1,6 @@
-%% mdftheorems.sty
-%% Copyright 2020 Federico Marotta
-%
-% This work may be distributed and/or modified under the
-% conditions of the LaTeX Project Public License, either version 1.3
-% of this license or (at your option) any later version.
-% The latest version of this license is in
-%   http://www.latex-project.org/lppl.txt
-% and version 1.3 or later is part of all distributions of LaTeX
-% version 2005/12/01 or later.
-%
-% This work has the LPPL maintenance status `maintained'.
-%
-% The Current Maintainer of this work is Federico Marotta
-%
-% This work consists of all the files listed in MANIFEST.md.
+\ProvidesPackage{styles/mdftheorems}
 
 % Use mdframed to shade the background of theorems
-\ProvidesPackage{styles/mdftheorems}
 
 % Load packages
 \let\openbox\relax % Workaround to get rid of an annoying error
@@ -37,6 +21,7 @@
 \newcommand{\@assumptionbackground}{\@background}
 \newcommand{\@remarkbackground}{\@background}
 \newcommand{\@examplebackground}{\@background}
+\newcommand{\@exercisebackground}{\@background}
 
 % Declare the options to change the colors
 \DeclareOptionX{background}{%
@@ -65,6 +50,9 @@
 }
 \DeclareOptionX{examplebackground}{%
 	\renewcommand{\@examplebackground}{#1}%
+}
+\DeclareOptionX{exercisebackground}{%
+	\renewcommand{\@exercisebackground}{#1}%
 }
 \DeclareOption*{\PassOptionsToPackage{\CurrentOption}{biblatex}}
 
@@ -162,6 +150,20 @@
 	%refname={theorem,theorems},
 	%Refname={Theorem,Theorems},
 ]{kaoexample}
+
+\declaretheoremstyle[
+	%spaceabove=.5\thm@preskip,
+	%spacebelow=.5\thm@postskip,
+	%headfont=\normalfont\bfseries,
+	%notefont=\normalfont, notebraces={ (}{)},
+	%bodyfont=\small,
+	%headformat={\NAME\space\NUMBER\space\NOTE},
+	headpunct={},
+	postheadspace={.5em plus .1em minus .1em},
+	%prefoothook={\hfill\qedsymbol}
+	%refname={theorem,theorems},
+	%Refname={Theorem,Theorems},
+]{kaoexercise}
 
 \theoremstyle{kaoplain}
 \declaretheorem[
@@ -269,6 +271,20 @@
 		%frametitlebackgroundcolor=\@theorembackground,
 	},
 ]{example}
+
+\theoremstyle{kaoexercise}
+\declaretheorem[
+	name=Exercise,
+	%refname={example,examples},
+	refname={Exercise,Exercises},
+	Refname={Exercise,Exercises},
+	numberwithin=section,
+	mdframed={
+		style=mdfkao,
+		backgroundcolor=\@exercisebackground,
+		%frametitlebackgroundcolor=\@theorembackground,
+	},
+]{exercise}
 
 %\renewcommand{\thetheorem}{\arabic{chapter}.\arabic{section}.\arabic{theorem}}
 %\renewcommand{\thetheorem}{\arabic{subsection}.\arabic{theorem}}
