--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -105,12 +105,12 @@ Changing the antenna material itself had also been investigated. Because of its 
 
 Modification of the waveguide shape has also been proposed. From the experience acquired on vacuum tubes, it has been suggested that making each of the LH grill dividing septa thicker in the middle than at the edge, in order to introduce a slight lateral component of the electric field which in returns modifies electron trajectories, might lead to multipactor suppression \sidecite{vaughan1982}.
 
-Multipactor had also been associated in the LHRF with window failures \sidecite{ikeda1989}. Discharges at pillbox windows at a pressure below $10^{-2}$~Pa which produces no or little effect on the reflected power have been observed. During these discharges, large temperature rise was also monitored, about 100 times higher than that in a no-discharge case at the power level of 500~kW. The discharges can be suppressed by sufficient RF conditioning and/or by a thin coating (around 10~nm) of Titanium Nitride (TiN) which has a lower secondary emission yield than the ceramic \sidecite{suharyanto2007, kaabi-1}. The later method is widely used on high power RF windows, for example on WEST 3.7~GHz windows \sidecite{peauger2005} or 5~GHz windows \sidecite{hillairet2015, kim2019-2} (cf. Section~\ref{sec:RF_windows}).
+Multipactor had also been associated in the LHRF with window failures \sidecite{ikeda1989}. Discharges at pillbox windows at a pressure below $10^{-2}$~Pa which produces no or little effect on the reflected power have been observed. During these discharges, large temperature rise was also monitored, about 100 times higher than that in a no-discharge case at the power level of 500~kW. The discharges can be suppressed by sufficient RF conditioning and/or by a thin coating (around 10~nm) of Titanium Nitride (TiN) which has a lower secondary emission yield than the ceramic \sidecite{suharyanto2007, kaabi2010}. The later method is widely used on high power RF windows, for example on WEST 3.7~GHz windows \sidecite{peauger2005} or 5~GHz windows \sidecite{hillairet2015, kim2019-2} (cf. Section~\ref{sec:RF_windows}).
 
 
 A peculiarity of LHRF antenna with respect to satellite payloads is that they usually operate with a non negligible SWR inside the launcher due to the plasma medium which reflects between 20 to 50\% of the input power. Hence, multipactor threshold in terms of power is not relevant and should instead be formulated in terms of electric field threshold then linked to a given power input and reflection coefficient. 
 
-\begin{marginfigure}[-1cm]
+\begin{marginfigure}
 	\centering
 	\includegraphics[width=0.9\linewidth]{figures/chap4/WEST_LH1}
 	\caption{WEST LH1 antenna}
@@ -123,6 +123,7 @@ A peculiarity of LHRF antenna with respect to satellite payloads is that they us
 	\caption{Typical geometry of a LHRF antenna thin rectangular waveguide close to the plasma.}
 	\label{fig:rectwglhgeometry}
 \end{marginfigure}
+
 Near the front face of the antenna, the tokamak strong magnetic DC magnetic field (few Teslas) is mostly parallel to the RF electric field in the antenna’s waveguides (Figure~\ref{fig:rectwglhgeometry}), with a strong negative gradient (1 to 2 T/m) along the waveguide longitudinal direction. Multipactor simulations showed a ~7\% reduction of the multipactor electric field threshold with respect to no magnetic field case for narrow waveguides (height<15~mm), as illustrated in Figure~\ref{fig:ethvsbyc3-c4}. Moreover, strong resonance correlated with the increase of the multipactor order is numerically observed when the total magnetic field (in norm) is such that the electron cyclotron frequency equals the wave frequency. In this case, the multipactor threshold is decreased more strongly for larger waveguides (-60\%) than for narrower ones (-20\%). Such case can lead to ease the breakdown occurrence, a situation which has been experimentally observed on smaller machines for which this range of magnetic field was met at the location of the grill antennas \sidecite{knowlton1982}. Such limitation is generally not observed experimentally on larger machine, due to the fact that the resonance layer occur in much wider waveguides. 
 
 When a magnetic field is directed along the waveguide’s large side direction, i.e. in the poloidal direction ($B_y$), the calculated multipactor power threshold can increase or decrease with respect to the threshold without DC magnetic field. However, in the typical range of radial magnitude observed in tokamak ($B_x$ ~0.1 to 0.3~T, no multipactor occurs. The addition of this $B_y$ field to a $B_0$ component has no effect on the threshold, unless $B_y \approx B_0$ where it is enhanced. 
