--- a/tex/chap_RF_fundamentals.tex
+++ b/tex/chap_RF_fundamentals.tex
@@ -261,7 +261,7 @@ R_s
 	\sqrt{\pi f \rho \mu }
 	\label{eq:sheet_resistance}
 \end{equation}
-with $\sigma=1/\rho$ the metal conductivity (in $[\si{S/m}]$) and $\sigma$ the metal resistivity (in $[\si{\Omega m}]$). 
+with $\sigma=1/\rho$ the metal conductivity (in $[\si{S/m}]$) and $\rho$ the metal resistivity (in $[\si{\Omega m}]$). 
 
 % #####################################################
 % #####################################################
